Add missing dependencies to test targets

--- a/src/test/regress/Makefile
+++ b/src/test/regress/Makefile
@@ -176,7 +176,7 @@ check-vanilla: all
 	# So we try it once more if it fails to prevent some failures in our CI.
 	${MAKE} check-vanilla-internal  || ${MAKE} check-vanilla-internal
 
-check-vanilla-internal:
+check-vanilla-internal: all
 	$(pg_regress_multi_check) --load-extension=citus --vanillatest
 
 check-multi-mx: all
@@ -191,7 +191,7 @@ check-operations: all
 	$(pg_regress_multi_check) --load-extension=citus \
 	-- $(MULTI_REGRESS_OPTS) --schedule=$(citus_abs_srcdir)/operations_schedule $(EXTRA_TESTS)
 
-check-columnar:
+check-columnar: all
 	$(pg_regress_multi_check) --load-extension=citus \
 	-- $(MULTI_REGRESS_OPTS) --schedule=$(citus_abs_srcdir)/columnar_schedule $(EXTRA_TESTS)
 
@@ -207,23 +207,23 @@ check-failure-base: all
 	$(pg_regress_multi_check) --load-extension=citus --mitmproxy \
 	-- $(MULTI_REGRESS_OPTS) --schedule=$(citus_abs_srcdir)/failure_base_schedule $(EXTRA_TESTS)
 
-check-pg-upgrade:
+check-pg-upgrade: all
 	$(pg_upgrade_check) --old-bindir=$(old-bindir) --new-bindir=$(new-bindir) --pgxsdir=$(pgxsdir)
 
-check-arbitrary-configs:
+check-arbitrary-configs: all
 	${arbitrary_config_check} --bindir=$(bindir) --pgxsdir=$(pgxsdir) --parallel=$(parallel) --configs=$(CONFIGS) --seed=$(seed)
 
-check-arbitrary-base:
+check-arbitrary-base: all
 	${arbitrary_config_check} --bindir=$(bindir) --pgxsdir=$(pgxsdir) --parallel=$(parallel) --configs=$(CONFIGS) --seed=$(seed) --base
 
-check-citus-upgrade:
+check-citus-upgrade: all
 	$(citus_upgrade_check) \
 		--bindir=$(bindir) \
 		--pgxsdir=$(pgxsdir) \
 		--citus-pre-tar=$(citus-pre-tar) \
 		--citus-post-tar=$(citus-post-tar)
 
-check-citus-upgrade-mixed:
+check-citus-upgrade-mixed: all
 	$(citus_upgrade_check) \
 		--bindir=$(bindir) \
 		--pgxsdir=$(pgxsdir) \
